# triangles-intersection

./: CMakeLists.txt  main.cpp  triangle_intersect.cpp  triangle_intersect.h
